# twitch_bot_template

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 0001_init.sql
src/: bot.rs  commands.rs  config.rs  db.rs  error.rs  eventsub.rs  feed.rs  gui.rs  helix.rs  main.rs  oauth.rs  timers.rs  tls.rs  tui.rs  ws.rs
src/irc/: client.rs  message.rs  mod.rs
