[package]
name = "twitch_bot_template"
version = "0.1.0"
edition = "2021"
description = "Solid, batteries-included starting point for a Twitch chat bot in Rust."

[[bin]]
name = "twitch_bot"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal"] }
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }

eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }

[features]
default = []
gui = ["dep:eframe", "dep:egui"]

[profile.release]
lto = "thin"
strip = true

[profile.release.build-override]
strip = false
